--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   },
   "dependencies": {
     "cors": "^2.8.5",
+    "dotenv": "^16.1.0",
     "express": "^4.18.2",
     "mongoose": "^7.2.0",
     "ts-node-dev": "^2.0.0"
