--- a/package.json
+++ b/package.json
@@ -6,8 +6,7 @@
   "scripts": {
     "start": "node ./dist/index.js",
     "dev": "ts-node-dev server/index.ts",
-    "build": "tsc",
-    "deploy": "serverless deploy"
+    "build": "tsc"
   },
   "author": "",
   "license": "ISC",
